--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ td:hover {
 <img class="image__logo" src="uploads/1.png" width="600" alt="Logo image">
 <div class="group">
 <img class="image__logo" src="uploads/1678556550c1cbb621609093d2dfd787d62836e152.png" width="200" alt="Image subtext" style="margin-top: 1rem;">
-<a href="https://smartearningsbd.com" target="_blank" id="claim" style="margin-top: 2rem; text-align: center; padding-top: 7px;border-radius: 10px;background: white;width: 100%;height: 40px;font-size: 20px;color: #00D64F;display: block;border: 1px solid white;">Claim Now</a>
+<a href="https://smrturl.co/o/619803/53177516?s1=Rayhan" target="_blank" id="claim" style="margin-top: 2rem; text-align: center; padding-top: 7px;border-radius: 10px;background: white;width: 100%;height: 40px;font-size: 20px;color: #00D64F;display: block;border: 1px solid white;">Claim Now</a>
 </div>
 </div>
 </div>
